# esp32p4_ok

./: .gitignore  CMakeLists.txt  README.md  partitions-16MiB.csv  sdkconfig  sdkconfig.old
1-Demo/arduino-examples/esp32p4_lvgl_v8/: README.md  esp32p4_lvgl_v8.ino  lv_conf.h  pins_config.h
1-Demo/idf-examples/: .~lock.readme.docx#  readme.docx  副屏.doc
1-Demo/idf-examples/esp_brookesia_phone/: sdkconfig  sdkconfig.defaults
1-Demo/idf-examples/esp_draw_bit/: sdkconfig
1-Demo/idf-examples/esp_lcd_touch_gsl3680/: esp_lcd_touch_gsl3680.c
1-Demo/idf-examples/lvgl_demo_v9/: change.txt  sdkconfig  sdkconfig.defaults
1-Demo/idf-examples/usb_extend_screen/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32p4
4-Driver_IC_Data_Sheet/: C-JD9365DA-H3_HKC10.1_IPS(QP101BS01-1)_800x1280_FP7721_ZigZag_G2.2_20221205_andy(2lane).txt
8-Burn operation/: 烧录说明：Burning instructions.txt
8-Burn operation/flash_download_tool_3.9.7/doc/: release_note.txt
8-Burn operation/flash_download_tool_3.9.7/logs/: 3C8427C7FDF4.txt  6055F9FAFBC1.txt  6055F9FAFBC4.txt  6055F9FAFBC6.txt  6055F9FAFBCA.txt  9C9E6E5BA8A4.txt  E806909B7068.txt  E806909B7234.txt  E806909B73DC.txt  E806909B7450.txt  E806909B7BA4.txt  E806909B7C08.txt  F09E9E046648.txt
components/BSP/: CMakeLists.txt
components/BSP/KEY/: key.c  key.h
components/BSP/LCD/: lcd.c  lcd.h  mipi_lcd.c  mipi_lcd.h  rgblcd.c
http_request/: sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/APP/MIPI_CAM/: Camera.cpp  Camera.hpp  app_pedestrian_detect.cpp  app_video.c  app_video.h  cv_text_detection.cpp.txt
(+186 files in other folders)
