idf_component_register(
                        SRC_DIRS 
                            "."
                            "APP/MIPI_CAM" 
                        INCLUDE_DIRS 
                            "."
                            "APP/MIPI_CAM"
                        #REQUIRES
                        #    driver
                        )
